--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.3.5",
     "nodemon": "^2.0.22",
+    "razorpay": "^2.9.0",
     "sequelize": "^6.32.1"
   }
 }
