--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mysql2": "^3.3.5",
     "nodemon": "^2.0.22",
     "razorpay": "^2.9.0",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.0"
   }
 }
