--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "aws-sdk": "^2.1414.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.3.5",
     "nodemon": "^2.0.22",
